# pinancos_obsolescence

./: .gitignore  Dockerfile  README.md  main.py  pyproject.toml
