[tool.poetry]
name = "passel"
version = "0.1.0"
description = ""
authors = ["Joana Teixeira <joana.teixeira@vizidox.com>"]

[tool.poetry.dependencies]
python = "^3.9"
discord.py = "2.2.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
