[tool.poetry]
name = "passel"
version = "0.1.0"
description = ""
authors = ["Joana Teixeira <joanbteixeira@gmail.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "~3.9.8"
discord-py = "^2.5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
